// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders a tab component 1`] = `
<div>
  <span>
    label
  </span>
  <div
    id="hello"
  >
    Hello
  </div>
</div>
`;

exports[`Tabs renders a tabs component 1`] = `
<div>
  <div>
    Hello
  </div>
</div>
`;
